# trading212-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: publish.yml
scripts/: alert_config.example.json  analyzer_service.py  daily_analyzer.py  email_notifier.py  ha_notifier.py  run_analyzer.bat  run_daemon.bat  standalone_analyzer.py  start_daemon.ps1  start_service.bat
scripts/homeassistant/: configuration.yaml  custom_sentences_en.yaml  dashboard_card.yaml  intent_scripts.yaml  scripts.yaml
src/: app.py  prompts.py  resources.py  server.py
src/api/: __init__.py  client.py
src/tools/: __init__.py  account.py  analytics.py  history.py  market.py  pies.py  trading.py
src/trading212_mcp_server/: app.py  models.py  prompts.py  server.py
src/trading212_mcp_server/api/: __init__.py  client.py
src/trading212_mcp_server/tools/: __init__.py  account.py  analytics.py  history.py  market.py  pies.py  trading.py
src/utils/: client.py
